--- a/po/ca.po
+++ b/po/ca.po
@@ -16,7 +16,7 @@ msgstr ""
 "Language: ca\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#. more than a minute
+#. TRANSLATORS: more than a minute
 #, c-format
 msgid "%.0f minute remaining"
 msgid_plural "%.0f minutes remaining"
@@ -93,6 +93,17 @@ msgstr "Actualització ME de %s"
 msgid "%s Mouse Update"
 msgstr "%s Actualització del ratolí"
 
+#. TRANSLATORS: Network Interface refers to the physical
+#. * PCI card, not the logical wired connection
+#, c-format
+msgid "%s Network Interface Update"
+msgstr "Actualització del controlador de xarxa %s"
+
+#. TRANSLATORS: Storage Controller is typically a RAID or SAS adapter
+#, c-format
+msgid "%s Storage Controller Update"
+msgstr "Actualització del controlador d'emmagatzematge %s"
+
 #. TRANSLATORS: the entire system, e.g. all internal devices,
 #. * the first %s is the device name, e.g. 'ThinkPad P50`
 #, c-format
@@ -134,12 +145,14 @@ msgstr "%s i tots els dispositius connectats poden no ser usables en actualitzar
 msgid "%s manufacturing mode"
 msgstr "Mode de fabricació %s"
 
-#. TRANSLATORS: warn the user before updating, %1 is a device name
+#. TRANSLATORS: warn the user before
+#. * updating, %1 is a device name
 #, c-format
 msgid "%s must remain connected for the duration of the update to avoid damage."
 msgstr "%s haurà d'estar connectat durant tota l'actualització per a evitar danys."
 
-#. TRANSLATORS: warn the user before updating, %1 is a machine name
+#. TRANSLATORS: warn the user before updating, %1 is a machine
+#. * name
 #, c-format
 msgid "%s must remain plugged into a power source for the duration of the update to avoid damage."
 msgstr "%s haurà de romandre connectat a una font d'alimentació durant tota l'actualització per a evitar danys."
@@ -204,6 +217,10 @@ msgstr[1] "%u segons"
 msgid "(obsoleted)"
 msgstr "(obsolet)"
 
+#. TRANSLATORS: the user needs to do something, e.g. remove the device
+msgid "Action Required:"
+msgstr "Acció requerida:"
+
 #. TRANSLATORS: command description
 msgid "Activate devices"
 msgstr "Activa els dispositius."
@@ -235,6 +252,12 @@ msgstr "Accepteu i habiliteu el remot?"
 #, c-format
 msgid "Alias to %s"
 msgstr "Àlies per a «%s»"
+
+#. TRANSLATORS: on some systems certain devices have to have matching
+#. versions,
+#. * e.g. the EFI driver for a given network card cannot be different
+msgid "All devices of the same type will be updated at the same time"
+msgstr "Tots els dispositius del mateix tipus s'actualitzaran al mateix temps"
 
 #. TRANSLATORS: command line option
 msgid "Allow downgrading firmware versions"
@@ -294,6 +317,10 @@ msgstr "Adjunta al mode microprogramari."
 #. TRANSLATORS: waiting for user to authenticate
 msgid "Authenticating…"
 msgstr "S'està autenticant..."
+
+#. TRANSLATORS: user needs to run a command
+msgid "Authentication details are required"
+msgstr "Es requereixen els detalls d'autenticació"
 
 #. TRANSLATORS: this is the PolicyKit modal dialog
 msgid "Authentication is required to downgrade the firmware on a removable device"
@@ -527,9 +554,15 @@ msgstr "És obligatori el microprogramari del dispositiu per a comprovar la vers
 msgid "Device is locked"
 msgstr "El dispositiu està bloquejat"
 
-#. TRANSLATORS: a version check is required for all firmware
+#. TRANSLATORS: the device cannot update from A->C and has to go A->B->C
 msgid "Device is required to install all provided releases"
 msgstr "El dispositiu és necessari per a instal·lar totes les versions subministrades"
+
+#. TRANSLATORS: currently unreachable, perhaps because it is in a lower power
+#. state
+#. * or is out of wireless range
+msgid "Device is unreachable"
+msgstr "El dispositiu és inabastable"
 
 #. TRANSLATORS: Device remains usable during update
 msgid "Device is usable for the duration of the update"
@@ -546,6 +579,10 @@ msgstr "Etapes d'actualització del dispositiu"
 #. TRANSLATORS: there is more than one supplier of the firmware
 msgid "Device supports switching to a different branch of firmware"
 msgstr "El dispositiu admet el canvi a una branca diferent de microprogramari"
+
+#. TRANSLATORS: command line option
+msgid "Device update method"
+msgstr "Mètode d'actualització del dispositiu"
 
 #. TRANSLATORS: Device update needs to be separately activated
 msgid "Device update needs activation"
@@ -567,12 +604,13 @@ msgstr "Els dispositius que s'han actualitzat correctament:"
 msgid "Devices that were not updated correctly:"
 msgstr "Els dispositius que no s'han actualitzat correctament:"
 
-#. TRANSLATORS: message letting the user know no device upgrade available due
-#. to missing on LVFS
+#. TRANSLATORS: message letting the user know no device
+#. * upgrade available due to missing on LVFS
 msgid "Devices with no available firmware updates: "
 msgstr "Dispositius sense actualitzacions de microprogramari disponibles:"
 
-#. TRANSLATORS: message letting the user know no device upgrade available
+#. TRANSLATORS: message letting the user know no device upgrade
+#. * available
 msgid "Devices with the latest available firmware version:"
 msgstr "Dispositius amb la versió més recent del microprogramari disponible:"
 
@@ -666,6 +704,10 @@ msgstr "S'està desactualitzant %s des de %s a %s... "
 #, c-format
 msgid "Downgrading %s…"
 msgstr "S'està desactualitzant %s…"
+
+#. TRANSLATORS: command description
+msgid "Download a file"
+msgstr "Descarrega un fitxer"
 
 #. TRANSLATORS: downloading from a remote server
 msgid "Downloading…"
@@ -913,6 +955,13 @@ msgid_plural "Firmware metadata has not been updated for %u days and may not be 
 msgstr[0] "Les metadades del microprogramari no s'han actualitzat durant %u dia i podria ser que no estiguin actualitzades."
 msgstr[1] "Les metadades del microprogramari no s'han actualitzat durant %u dies i podria ser que no estiguin actualitzades."
 
+#. TRANSLATORS: error message for a user who ran fwupdmgr
+#. refresh recently %1 is an already translated timestamp such
+#. as 6 hours or 15 seconds
+#, c-format
+msgid "Firmware metadata last refresh: %s ago. Use --force to refresh again."
+msgstr "Últim refresc de les metadades de microprogramari: fa %s. Empreu «--force» per a refrescar de nou."
+
 #. TRANSLATORS: Title: if firmware updates are available
 msgid "Firmware updates"
 msgstr "Actualitzacions del microprogramari"
@@ -1015,7 +1064,7 @@ msgid "Host Security ID:"
 msgstr "ID de seguretat de l'amfitrió:"
 
 #. TRANSLATORS: Title:
-#. https://en.wikipedia.org/wiki/Input%E2%80%93output_memory_management_unit
+#. * https://en.wikipedia.org/wiki/Input%E2%80%93output_memory_management_unit
 msgid "IOMMU"
 msgstr "IOMMU"
 
@@ -1034,10 +1083,6 @@ msgstr "Ignora les falles de la suma de comprovació del microprogramari"
 #. TRANSLATORS: command line option
 msgid "Ignore firmware hardware mismatch failures"
 msgstr "Ignora les falles de discrepància del maquinari del microprogramari"
-
-#. TRANSLATORS: command line option
-msgid "Ignore requirement of external power source"
-msgstr "Ignora el requisit de la font d'alimentació externa"
 
 #. TRANSLATORS: Ignore validation safety checks when flashing this device
 msgid "Ignore validation safety checks"
@@ -1156,8 +1201,13 @@ msgstr[1] "Problemes"
 msgid "KEY,VALUE"
 msgstr "CLAU,VALOR"
 
+#. TRANSLATORS: keyring type, e.g. GPG or PKCS7
 msgid "Keyring"
 msgstr " Anell de claus"
+
+#. TRANSLATORS: command argument: uppercase, spaces->dashes
+msgid "LOCATION"
+msgstr "UBICACIÓ"
 
 #. TRANSLATORS: the original time/date the device was modified
 msgid "Last modified"
@@ -1332,6 +1382,9 @@ msgstr "Actualment, no hi ha cap remot habilitat, de manera que no hi ha metadad
 msgid "No remotes available"
 msgstr "No hi ha cap remot disponible"
 
+msgid "No updates available for remaining devices"
+msgstr "No hi ha cap actualització disponible per als dispositius restants"
+
 #. TRANSLATORS: nothing was updated offline
 msgid "No updates were applied"
 msgstr "No s'han aplicat les actualitzacions"
@@ -1355,6 +1408,15 @@ msgstr "Mostra només un únic valor de PCR"
 #. TRANSLATORS: command line option
 msgid "Only use IPFS when downloading files"
 msgstr "Empra només IPFS quan es baixin els fitxers"
+
+#. TRANSLATORS: some devices can only be updated to a new semver and cannot
+#. * be downgraded or reinstalled with the existing version
+msgid "Only version upgrades are allowed"
+msgstr "Només es permeten actualitzacions de la versió"
+
+#. TRANSLATORS: command line option
+msgid "Output in JSON format"
+msgstr "Sortida en el format JSON"
 
 #. TRANSLATORS: command line option
 msgid "Override the default ESP path"
@@ -1555,6 +1617,10 @@ msgstr "Executa la rutina de neteja de la composició del connector en usar inst
 msgid "Run the plugin composite prepare routine when using install-blob"
 msgstr "Executa la rutina de preparació de la composició del connector en usar install-blob"
 
+#. TRANSLATORS: The kernel does not support this plugin
+msgid "Running kernel is too old"
+msgstr "El nucli executat és massa antic"
+
 #. TRANSLATORS:  this is the HSI suffix
 msgid "Runtime Suffix"
 msgstr "Sufix d'execució"
@@ -1683,6 +1749,7 @@ msgstr "Signa un microprogramari amb una clau nova"
 msgid "Sign data using the client certificate"
 msgstr "Signa les dades emprant el certificat del client"
 
+#. TRANSLATORS: command description
 msgctxt "command-description"
 msgid "Sign data using the client certificate"
 msgstr "Signa les dades emprant el certificat del client"
@@ -1822,6 +1889,10 @@ msgstr "Contaminada"
 
 msgid "Target"
 msgstr "Objectiu"
+
+#. TRANSLATORS: command description
+msgid "Test a device using a JSON manifest"
+msgstr "Prova un dispositiu emprant un manifest JSON"
 
 #. TRANSLATORS: do not translate the variables marked using $
 msgid "The LVFS is a free service that operates as an independent legal entity and has no connection with $OS_RELEASE:NAME$. Your distributor may not have verified any of the firmware updates for compatibility with your system or connected devices. All firmware is provided only by the original equipment manufacturer."
@@ -2075,11 +2146,11 @@ msgstr "L'enviament dels informes de microprogramari ajudarà als proveïdors de
 msgid "Urgency"
 msgstr "Urgència"
 
-#. TRANSLATORS: error message explaining command to run to how to get help
+#. TRANSLATORS: error message explaining command on how to get help
 msgid "Use fwupdmgr --help for help"
 msgstr "Empreu «fwupdmgr --help» per a l'ajuda"
 
-#. TRANSLATORS: error message explaining command to run to how to get help
+#. TRANSLATORS: error message explaining command on how to get help
 msgid "Use fwupdtool --help for help"
 msgstr "Empreu «fwupdtool --help» per a l'ajuda"
 
@@ -2174,6 +2245,10 @@ msgstr "[ID_DISPOSITIU|GUID] [BRANCA]"
 #. TRANSLATORS: command argument: uppercase, spaces->dashes
 msgid "[FILE FILE_SIG REMOTE-ID]"
 msgstr "[FITXER SIGNATURA_FITXER ID_REMOT]"
+
+#. TRANSLATORS: command argument: uppercase, spaces->dashes
+msgid "[FILENAME1] [FILENAME2]"
+msgstr "[NOM_FITXER_1] [NOM_FITXER_2]"
 
 #. TRANSLATORS: command argument: uppercase, spaces->dashes
 msgid "[SMBIOS-FILE|HWIDS-FILE]"
