--- a/po/ru.po
+++ b/po/ru.po
@@ -16,7 +16,7 @@ msgstr ""
 "Language: ru\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
-#. more than a minute
+#. TRANSLATORS: more than a minute
 #, c-format
 msgid "%.0f minute remaining"
 msgid_plural "%.0f minutes remaining"
@@ -561,6 +561,7 @@ msgstr "Установка обновления прошивки…"
 msgid "Installing on %s…"
 msgstr "Установка на устройство %s…"
 
+#. TRANSLATORS: keyring type, e.g. GPG or PKCS7
 msgid "Keyring"
 msgstr "Хранилище ключей"
 
@@ -809,6 +810,7 @@ msgstr "Выключить сейчас?"
 msgid "Sign data using the client certificate"
 msgstr "Подписать данные с использованием сертификата клиента"
 
+#. TRANSLATORS: command description
 msgctxt "command-description"
 msgid "Sign data using the client certificate"
 msgstr "Подписать данные с использованием сертификата клиента"
