--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -16,7 +16,7 @@ msgstr ""
 "Language: en_GB\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#. more than a minute
+#. TRANSLATORS: more than a minute
 #, c-format
 msgid "%.0f minute remaining"
 msgid_plural "%.0f minutes remaining"
@@ -134,12 +134,14 @@ msgstr "%s and all connected devices may not be usable while updating."
 msgid "%s manufacturing mode"
 msgstr "%s manufacturing mode"
 
-#. TRANSLATORS: warn the user before updating, %1 is a device name
+#. TRANSLATORS: warn the user before
+#. * updating, %1 is a device name
 #, c-format
 msgid "%s must remain connected for the duration of the update to avoid damage."
 msgstr "%s must remain connected for the duration of the update to avoid damage."
 
-#. TRANSLATORS: warn the user before updating, %1 is a machine name
+#. TRANSLATORS: warn the user before updating, %1 is a machine
+#. * name
 #, c-format
 msgid "%s must remain plugged into a power source for the duration of the update to avoid damage."
 msgstr "%s must remain plugged into a power source for the duration of the update to avoid damage."
@@ -204,6 +206,10 @@ msgstr[1] "%u seconds"
 msgid "(obsoleted)"
 msgstr "(obsoleted)"
 
+#. TRANSLATORS: the user needs to do something, e.g. remove the device
+msgid "Action Required:"
+msgstr "Action Required:"
+
 #. TRANSLATORS: command description
 msgid "Activate devices"
 msgstr "Activate devices"
@@ -235,6 +241,12 @@ msgstr "Agree and enable the remote?"
 #, c-format
 msgid "Alias to %s"
 msgstr "Alias to %s"
+
+#. TRANSLATORS: on some systems certain devices have to have matching
+#. versions,
+#. * e.g. the EFI driver for a given network card cannot be different
+msgid "All devices of the same type will be updated at the same time"
+msgstr "All devices of the same type will be updated at the same time"
 
 #. TRANSLATORS: command line option
 msgid "Allow downgrading firmware versions"
@@ -294,6 +306,10 @@ msgstr "Attach to firmware mode"
 #. TRANSLATORS: waiting for user to authenticate
 msgid "Authenticating…"
 msgstr "Authenticating…"
+
+#. TRANSLATORS: user needs to run a command
+msgid "Authentication details are required"
+msgstr "Authentication details are required"
 
 #. TRANSLATORS: this is the PolicyKit modal dialog
 msgid "Authentication is required to downgrade the firmware on a removable device"
@@ -527,7 +543,7 @@ msgstr "Device firmware is required to have a version check"
 msgid "Device is locked"
 msgstr "Device is locked"
 
-#. TRANSLATORS: a version check is required for all firmware
+#. TRANSLATORS: the device cannot update from A->C and has to go A->B->C
 msgid "Device is required to install all provided releases"
 msgstr "Device is required to install all provided releases"
 
@@ -546,6 +562,10 @@ msgstr "Device stages updates"
 #. TRANSLATORS: there is more than one supplier of the firmware
 msgid "Device supports switching to a different branch of firmware"
 msgstr "Device supports switching to a different branch of firmware"
+
+#. TRANSLATORS: command line option
+msgid "Device update method"
+msgstr "Device update method"
 
 #. TRANSLATORS: Device update needs to be separately activated
 msgid "Device update needs activation"
@@ -567,12 +587,13 @@ msgstr "Devices that have been updated successfully:"
 msgid "Devices that were not updated correctly:"
 msgstr "Devices that were not updated correctly:"
 
-#. TRANSLATORS: message letting the user know no device upgrade available due
-#. to missing on LVFS
+#. TRANSLATORS: message letting the user know no device
+#. * upgrade available due to missing on LVFS
 msgid "Devices with no available firmware updates: "
 msgstr "Devices with no available firmware updates: "
 
-#. TRANSLATORS: message letting the user know no device upgrade available
+#. TRANSLATORS: message letting the user know no device upgrade
+#. * available
 msgid "Devices with the latest available firmware version:"
 msgstr "Devices with the latest available firmware version:"
 
@@ -666,6 +687,10 @@ msgstr "Downgrading %s from %s to %s... "
 #, c-format
 msgid "Downgrading %s…"
 msgstr "Downgrading %s…"
+
+#. TRANSLATORS: command description
+msgid "Download a file"
+msgstr "Download a file"
 
 #. TRANSLATORS: downloading from a remote server
 msgid "Downloading…"
@@ -913,6 +938,13 @@ msgid_plural "Firmware metadata has not been updated for %u days and may not be 
 msgstr[0] "Firmware metadata has not been updated for %u day and may not be up to date."
 msgstr[1] "Firmware metadata has not been updated for %u days and may not be up to date."
 
+#. TRANSLATORS: error message for a user who ran fwupdmgr
+#. refresh recently %1 is an already translated timestamp such
+#. as 6 hours or 15 seconds
+#, c-format
+msgid "Firmware metadata last refresh: %s ago. Use --force to refresh again."
+msgstr "Firmware metadata last refresh: %s ago. Use --force to refresh again."
+
 #. TRANSLATORS: Title: if firmware updates are available
 msgid "Firmware updates"
 msgstr "Firmware updates"
@@ -1015,7 +1047,7 @@ msgid "Host Security ID:"
 msgstr "Host Security ID:"
 
 #. TRANSLATORS: Title:
-#. https://en.wikipedia.org/wiki/Input%E2%80%93output_memory_management_unit
+#. * https://en.wikipedia.org/wiki/Input%E2%80%93output_memory_management_unit
 msgid "IOMMU"
 msgstr "IOMMU"
 
@@ -1034,10 +1066,6 @@ msgstr "Ignore firmware checksum failures"
 #. TRANSLATORS: command line option
 msgid "Ignore firmware hardware mismatch failures"
 msgstr "Ignore firmware hardware mismatch failures"
-
-#. TRANSLATORS: command line option
-msgid "Ignore requirement of external power source"
-msgstr "Ignore requirement of external power source"
 
 #. TRANSLATORS: Ignore validation safety checks when flashing this device
 msgid "Ignore validation safety checks"
@@ -1156,8 +1184,13 @@ msgstr[1] "Issues"
 msgid "KEY,VALUE"
 msgstr "KEY,VALUE"
 
+#. TRANSLATORS: keyring type, e.g. GPG or PKCS7
 msgid "Keyring"
 msgstr "Keyring"
+
+#. TRANSLATORS: command argument: uppercase, spaces->dashes
+msgid "LOCATION"
+msgstr "LOCATION"
 
 #. TRANSLATORS: the original time/date the device was modified
 msgid "Last modified"
@@ -1332,6 +1365,9 @@ msgstr "No remotes are currently enabled so no metadata is available."
 msgid "No remotes available"
 msgstr "No remotes available"
 
+msgid "No updates available for remaining devices"
+msgstr "No updates available for remaining devices"
+
 #. TRANSLATORS: nothing was updated offline
 msgid "No updates were applied"
 msgstr "No updates were applied"
@@ -1355,6 +1391,15 @@ msgstr "Only show single PCR value"
 #. TRANSLATORS: command line option
 msgid "Only use IPFS when downloading files"
 msgstr "Only use IPFS when downloading files"
+
+#. TRANSLATORS: some devices can only be updated to a new semver and cannot
+#. * be downgraded or reinstalled with the existing version
+msgid "Only version upgrades are allowed"
+msgstr "Only version upgrades are allowed"
+
+#. TRANSLATORS: command line option
+msgid "Output in JSON format"
+msgstr "Output in JSON format"
 
 #. TRANSLATORS: command line option
 msgid "Override the default ESP path"
@@ -1555,6 +1600,10 @@ msgstr "Run the plugin composite cleanup routine when using install-blob"
 msgid "Run the plugin composite prepare routine when using install-blob"
 msgstr "Run the plugin composite prepare routine when using install-blob"
 
+#. TRANSLATORS: The kernel does not support this plugin
+msgid "Running kernel is too old"
+msgstr "Running kernel is too old"
+
 #. TRANSLATORS:  this is the HSI suffix
 msgid "Runtime Suffix"
 msgstr "Runtime Suffix"
@@ -1683,6 +1732,7 @@ msgstr "Sign a firmware with a new key"
 msgid "Sign data using the client certificate"
 msgstr "Sign data using the client certificate"
 
+#. TRANSLATORS: command description
 msgctxt "command-description"
 msgid "Sign data using the client certificate"
 msgstr "Sign data using the client certificate"
@@ -2075,11 +2125,11 @@ msgstr "Uploading firmware reports helps hardware vendors to quickly identify fa
 msgid "Urgency"
 msgstr "Urgency"
 
-#. TRANSLATORS: error message explaining command to run to how to get help
+#. TRANSLATORS: error message explaining command on how to get help
 msgid "Use fwupdmgr --help for help"
 msgstr "Use fwupdmgr --help for help"
 
-#. TRANSLATORS: error message explaining command to run to how to get help
+#. TRANSLATORS: error message explaining command on how to get help
 msgid "Use fwupdtool --help for help"
 msgstr "Use fwupdtool --help for help"
 
