--- a/po/it.po
+++ b/po/it.po
@@ -16,7 +16,7 @@ msgstr ""
 "Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#. more than a minute
+#. TRANSLATORS: more than a minute
 #, c-format
 msgid "%.0f minute remaining"
 msgid_plural "%.0f minutes remaining"
@@ -93,6 +93,17 @@ msgstr "Aggiornamento ME di %s"
 msgid "%s Mouse Update"
 msgstr "Aggiornamento mouse %s"
 
+#. TRANSLATORS: Network Interface refers to the physical
+#. * PCI card, not the logical wired connection
+#, c-format
+msgid "%s Network Interface Update"
+msgstr "Aggiornamento interfaccia di rete %s"
+
+#. TRANSLATORS: Storage Controller is typically a RAID or SAS adapter
+#, c-format
+msgid "%s Storage Controller Update"
+msgstr "Aggiornamento controller di archiviazione %s"
+
 #. TRANSLATORS: the entire system, e.g. all internal devices,
 #. * the first %s is the device name, e.g. 'ThinkPad P50`
 #, c-format
@@ -134,12 +145,14 @@ msgstr "%s e tutti i dispositivi collegati potrebbero non essere utilizzabili du
 msgid "%s manufacturing mode"
 msgstr "Modalità costruttore %s"
 
-#. TRANSLATORS: warn the user before updating, %1 is a device name
+#. TRANSLATORS: warn the user before
+#. * updating, %1 is a device name
 #, c-format
 msgid "%s must remain connected for the duration of the update to avoid damage."
 msgstr "%s deve rimanere collegato durante l'aggiornamento per evitare possibili danni."
 
-#. TRANSLATORS: warn the user before updating, %1 is a machine name
+#. TRANSLATORS: warn the user before updating, %1 is a machine
+#. * name
 #, c-format
 msgid "%s must remain plugged into a power source for the duration of the update to avoid damage."
 msgstr "%s deve rimanere collegato alla rete elettrica durante l'aggiornamento per evitare possibili danni."
@@ -204,6 +217,10 @@ msgstr[1] "%u secondi"
 msgid "(obsoleted)"
 msgstr "(obsoleto)"
 
+#. TRANSLATORS: the user needs to do something, e.g. remove the device
+msgid "Action Required:"
+msgstr "Azione richiesta:"
+
 #. TRANSLATORS: command description
 msgid "Activate devices"
 msgstr "Attiva dispositivi"
@@ -235,6 +252,12 @@ msgstr "Accettare e abilitare il remoto?"
 #, c-format
 msgid "Alias to %s"
 msgstr "Alias di %s"
+
+#. TRANSLATORS: on some systems certain devices have to have matching
+#. versions,
+#. * e.g. the EFI driver for a given network card cannot be different
+msgid "All devices of the same type will be updated at the same time"
+msgstr "Tutti i dispositivi dello stesso tipo saranno aggiornati allo stesso tempo"
 
 #. TRANSLATORS: command line option
 msgid "Allow downgrading firmware versions"
@@ -294,6 +317,10 @@ msgstr "Collega in modalità firmware"
 #. TRANSLATORS: waiting for user to authenticate
 msgid "Authenticating…"
 msgstr "Autenticazione…"
+
+#. TRANSLATORS: user needs to run a command
+msgid "Authentication details are required"
+msgstr "Sono richiesti i dettagli di autenticazione"
 
 #. TRANSLATORS: this is the PolicyKit modal dialog
 msgid "Authentication is required to downgrade the firmware on a removable device"
@@ -527,9 +554,15 @@ msgstr "È richiesto il firmware dispositivo per eseguire un controllo della ver
 msgid "Device is locked"
 msgstr "Il dispositivo è bloccato"
 
-#. TRANSLATORS: a version check is required for all firmware
+#. TRANSLATORS: the device cannot update from A->C and has to go A->B->C
 msgid "Device is required to install all provided releases"
 msgstr "È richiesto un dispositivo per installare tutti i rilasci forniti"
+
+#. TRANSLATORS: currently unreachable, perhaps because it is in a lower power
+#. state
+#. * or is out of wireless range
+msgid "Device is unreachable"
+msgstr "Il dispositivo non è raggiungibile"
 
 #. TRANSLATORS: Device remains usable during update
 msgid "Device is usable for the duration of the update"
@@ -546,6 +579,10 @@ msgstr "Il dispositivo applica gli aggiornamenti a fasi"
 #. TRANSLATORS: there is more than one supplier of the firmware
 msgid "Device supports switching to a different branch of firmware"
 msgstr "Il dispositivo supporta il passaggio a un ramo diverso del firmware"
+
+#. TRANSLATORS: command line option
+msgid "Device update method"
+msgstr "Metodo di aggiornamento del dispositivo"
 
 #. TRANSLATORS: Device update needs to be separately activated
 msgid "Device update needs activation"
@@ -567,12 +604,13 @@ msgstr "Dispositivi aggiornati con successo:"
 msgid "Devices that were not updated correctly:"
 msgstr "Dispositivi non aggiornati correttamente:"
 
-#. TRANSLATORS: message letting the user know no device upgrade available due
-#. to missing on LVFS
+#. TRANSLATORS: message letting the user know no device
+#. * upgrade available due to missing on LVFS
 msgid "Devices with no available firmware updates: "
 msgstr "Dispositivi senza aggiornamenti firmware:"
 
-#. TRANSLATORS: message letting the user know no device upgrade available
+#. TRANSLATORS: message letting the user know no device upgrade
+#. * available
 msgid "Devices with the latest available firmware version:"
 msgstr "Dispositivi con l'ultima versione disponibile del firmware:"
 
@@ -666,6 +704,10 @@ msgstr "Arretramento di %s da %s a %s..."
 #, c-format
 msgid "Downgrading %s…"
 msgstr "Arretramento di %s…"
+
+#. TRANSLATORS: command description
+msgid "Download a file"
+msgstr "Scarica un file"
 
 #. TRANSLATORS: downloading from a remote server
 msgid "Downloading…"
@@ -913,6 +955,13 @@ msgid_plural "Firmware metadata has not been updated for %u days and may not be 
 msgstr[0] "I metadati del firmware non sono stati controllati per %u giorno e potrebbero non essere aggiornati."
 msgstr[1] "I metadati del firmware non sono stati controllati per %u giorni e potrebbero non essere aggiornati."
 
+#. TRANSLATORS: error message for a user who ran fwupdmgr
+#. refresh recently %1 is an already translated timestamp such
+#. as 6 hours or 15 seconds
+#, c-format
+msgid "Firmware metadata last refresh: %s ago. Use --force to refresh again."
+msgstr "Ultimo aggiornamento metadati firmware: %s fa. Usare --force per aggiornare nuovamente."
+
 #. TRANSLATORS: Title: if firmware updates are available
 msgid "Firmware updates"
 msgstr "Aggiornamenti firmware"
@@ -1015,7 +1064,7 @@ msgid "Host Security ID:"
 msgstr "ID sicurezza host:"
 
 #. TRANSLATORS: Title:
-#. https://en.wikipedia.org/wiki/Input%E2%80%93output_memory_management_unit
+#. * https://en.wikipedia.org/wiki/Input%E2%80%93output_memory_management_unit
 msgid "IOMMU"
 msgstr "IOMMU"
 
@@ -1034,10 +1083,6 @@ msgstr "Ignora i checksum del firmware non riusciti"
 #. TRANSLATORS: command line option
 msgid "Ignore firmware hardware mismatch failures"
 msgstr "Ignora corrispondenze errate firmware hardware"
-
-#. TRANSLATORS: command line option
-msgid "Ignore requirement of external power source"
-msgstr "Ignora richiesta di sorgente elettrica esterna"
 
 #. TRANSLATORS: Ignore validation safety checks when flashing this device
 msgid "Ignore validation safety checks"
@@ -1156,8 +1201,13 @@ msgstr[1] "Problemi"
 msgid "KEY,VALUE"
 msgstr "CHIAVE,VALORE"
 
+#. TRANSLATORS: keyring type, e.g. GPG or PKCS7
 msgid "Keyring"
 msgstr "Portachiavi"
+
+#. TRANSLATORS: command argument: uppercase, spaces->dashes
+msgid "LOCATION"
+msgstr "POSIZIONE"
 
 #. TRANSLATORS: the original time/date the device was modified
 msgid "Last modified"
@@ -1332,6 +1382,9 @@ msgstr "Non è abilitato alcun remoto e non sono disponibili metadati."
 msgid "No remotes available"
 msgstr "Nessun server disponibile"
 
+msgid "No updates available for remaining devices"
+msgstr "Nessun aggiornamento disponibile per i dispositivi rimanenti"
+
 #. TRANSLATORS: nothing was updated offline
 msgid "No updates were applied"
 msgstr "Non è stato applicato alcun aggiornamento"
@@ -1355,6 +1408,15 @@ msgstr "Mostra solo il valore PCR"
 #. TRANSLATORS: command line option
 msgid "Only use IPFS when downloading files"
 msgstr "Usa IPFS solo quando si scaricano file"
+
+#. TRANSLATORS: some devices can only be updated to a new semver and cannot
+#. * be downgraded or reinstalled with the existing version
+msgid "Only version upgrades are allowed"
+msgstr "Sono consentiti solo avanzamenti di versione"
+
+#. TRANSLATORS: command line option
+msgid "Output in JSON format"
+msgstr "Output in formato JSON"
 
 #. TRANSLATORS: command line option
 msgid "Override the default ESP path"
@@ -1555,6 +1617,10 @@ msgstr "Esegue la procedura di pulizia del plugin quando si utilizza install-blo
 msgid "Run the plugin composite prepare routine when using install-blob"
 msgstr "Esegue la procedura di preparazione del plugin quando si utilizza install-blob"
 
+#. TRANSLATORS: The kernel does not support this plugin
+msgid "Running kernel is too old"
+msgstr "La versione del kernel in esecuzione è troppo vecchia"
+
 #. TRANSLATORS:  this is the HSI suffix
 msgid "Runtime Suffix"
 msgstr "Suffisso di runtime"
@@ -1683,6 +1749,7 @@ msgstr "Firma un firmware con una chiave nuova"
 msgid "Sign data using the client certificate"
 msgstr "Firma i dati col certificato del client"
 
+#. TRANSLATORS: command description
 msgctxt "command-description"
 msgid "Sign data using the client certificate"
 msgstr "Firma i dati col certificato del client"
@@ -1822,6 +1889,10 @@ msgstr "Non integro"
 
 msgid "Target"
 msgstr "Obiettivo"
+
+#. TRANSLATORS: command description
+msgid "Test a device using a JSON manifest"
+msgstr "Verifica un dispositivo usando un manifesto JSON"
 
 #. TRANSLATORS: do not translate the variables marked using $
 msgid "The LVFS is a free service that operates as an independent legal entity and has no connection with $OS_RELEASE:NAME$. Your distributor may not have verified any of the firmware updates for compatibility with your system or connected devices. All firmware is provided only by the original equipment manufacturer."
@@ -2075,11 +2146,11 @@ msgstr "Inviare resoconti sul firmware aiuta gli sviluppatori a identificare vel
 msgid "Urgency"
 msgstr "Urgenza"
 
-#. TRANSLATORS: error message explaining command to run to how to get help
+#. TRANSLATORS: error message explaining command on how to get help
 msgid "Use fwupdmgr --help for help"
 msgstr "Usare «fwupdmgr --help» per maggiori informazioni"
 
-#. TRANSLATORS: error message explaining command to run to how to get help
+#. TRANSLATORS: error message explaining command on how to get help
 msgid "Use fwupdtool --help for help"
 msgstr "Usare «fwupdtool --help» per maggiori informazioni"
 
@@ -2174,6 +2245,10 @@ msgstr "[ID-DISPOSITIVO|GUID] [BRANCH]"
 #. TRANSLATORS: command argument: uppercase, spaces->dashes
 msgid "[FILE FILE_SIG REMOTE-ID]"
 msgstr "[FILE SIG_FILE ID-REMOTO]"
+
+#. TRANSLATORS: command argument: uppercase, spaces->dashes
+msgid "[FILENAME1] [FILENAME2]"
+msgstr "[NOMEFILE1] [NOMEFILE2]"
 
 #. TRANSLATORS: command argument: uppercase, spaces->dashes
 msgid "[SMBIOS-FILE|HWIDS-FILE]"
