--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -19,7 +19,7 @@ msgstr ""
 "Language: pt_BR\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#. more than a minute
+#. TRANSLATORS: more than a minute
 #, c-format
 msgid "%.0f minute remaining"
 msgid_plural "%.0f minutes remaining"
@@ -96,6 +96,17 @@ msgstr "Atualização de ME para %s"
 msgid "%s Mouse Update"
 msgstr "Atualização do mouse para %s"
 
+#. TRANSLATORS: Network Interface refers to the physical
+#. * PCI card, not the logical wired connection
+#, c-format
+msgid "%s Network Interface Update"
+msgstr "Atualização da interface de rede %s"
+
+#. TRANSLATORS: Storage Controller is typically a RAID or SAS adapter
+#, c-format
+msgid "%s Storage Controller Update"
+msgstr "Atualização do controlador de armazenamento %s"
+
 #. TRANSLATORS: the entire system, e.g. all internal devices,
 #. * the first %s is the device name, e.g. 'ThinkPad P50`
 #, c-format
@@ -137,12 +148,14 @@ msgstr "%s e todos os dispositivos conectados não podem ser usados durante a at
 msgid "%s manufacturing mode"
 msgstr "Modo de fabricação de %s"
 
-#. TRANSLATORS: warn the user before updating, %1 is a device name
+#. TRANSLATORS: warn the user before
+#. * updating, %1 is a device name
 #, c-format
 msgid "%s must remain connected for the duration of the update to avoid damage."
 msgstr "%s deve permanecer conectado durante a atualização para evitar danos."
 
-#. TRANSLATORS: warn the user before updating, %1 is a machine name
+#. TRANSLATORS: warn the user before updating, %1 is a machine
+#. * name
 #, c-format
 msgid "%s must remain plugged into a power source for the duration of the update to avoid damage."
 msgstr "%s deve permanecer conectado a uma fonte de energia durante a atualização para evitar danos."
@@ -207,6 +220,10 @@ msgstr[1] "%u segundos"
 msgid "(obsoleted)"
 msgstr "(obsoleto)"
 
+#. TRANSLATORS: the user needs to do something, e.g. remove the device
+msgid "Action Required:"
+msgstr "Ação necessária:"
+
 #. TRANSLATORS: command description
 msgid "Activate devices"
 msgstr "Habilita dispositivos"
@@ -238,6 +255,12 @@ msgstr "Concordar e habilitar o remoto?"
 #, c-format
 msgid "Alias to %s"
 msgstr "Atalho para %s"
+
+#. TRANSLATORS: on some systems certain devices have to have matching
+#. versions,
+#. * e.g. the EFI driver for a given network card cannot be different
+msgid "All devices of the same type will be updated at the same time"
+msgstr "Todos os dispositivos do mesmo tipo serão atualizados ao mesmo tempo"
 
 #. TRANSLATORS: command line option
 msgid "Allow downgrading firmware versions"
@@ -297,6 +320,10 @@ msgstr "Modo anexar ao firmware"
 #. TRANSLATORS: waiting for user to authenticate
 msgid "Authenticating…"
 msgstr "Autenticando…"
+
+#. TRANSLATORS: user needs to run a command
+msgid "Authentication details are required"
+msgstr "Os detalhes de autenticação são necessários"
 
 #. TRANSLATORS: this is the PolicyKit modal dialog
 msgid "Authentication is required to downgrade the firmware on a removable device"
@@ -530,9 +557,15 @@ msgstr "Um firmware de dispositivo é necessário para ter uma verificação de 
 msgid "Device is locked"
 msgstr "O dispositivo está bloqueado"
 
-#. TRANSLATORS: a version check is required for all firmware
+#. TRANSLATORS: the device cannot update from A->C and has to go A->B->C
 msgid "Device is required to install all provided releases"
 msgstr "Um dispositivo é necessário para instalar todos os lançamentos fornecidos"
+
+#. TRANSLATORS: currently unreachable, perhaps because it is in a lower power
+#. state
+#. * or is out of wireless range
+msgid "Device is unreachable"
+msgstr "O dispositivo está inalcançável"
 
 #. TRANSLATORS: Device remains usable during update
 msgid "Device is usable for the duration of the update"
@@ -549,6 +582,10 @@ msgstr "Atualizações de estágios do dispositivo"
 #. TRANSLATORS: there is more than one supplier of the firmware
 msgid "Device supports switching to a different branch of firmware"
 msgstr "O dispositivo tem suporte para alternar para uma ramificação diferente do firmware"
+
+#. TRANSLATORS: command line option
+msgid "Device update method"
+msgstr "Método de atualização do dispositivo"
 
 #. TRANSLATORS: Device update needs to be separately activated
 msgid "Device update needs activation"
@@ -570,12 +607,13 @@ msgstr "Dispositivos que foram atualizados com sucesso:"
 msgid "Devices that were not updated correctly:"
 msgstr "Dispositivos que não foram atualizados com sucesso:"
 
-#. TRANSLATORS: message letting the user know no device upgrade available due
-#. to missing on LVFS
+#. TRANSLATORS: message letting the user know no device
+#. * upgrade available due to missing on LVFS
 msgid "Devices with no available firmware updates: "
 msgstr "Dispositivos com nenhuma atualização de firmware disponível:"
 
-#. TRANSLATORS: message letting the user know no device upgrade available
+#. TRANSLATORS: message letting the user know no device upgrade
+#. * available
 msgid "Devices with the latest available firmware version:"
 msgstr "Dispositivos com a versão mais recente do firmware disponível:"
 
@@ -669,6 +707,10 @@ msgstr "Fazendo downgrade de %s de %s para %s… "
 #, c-format
 msgid "Downgrading %s…"
 msgstr "Fazendo downgrade %s…"
+
+#. TRANSLATORS: command description
+msgid "Download a file"
+msgstr "Baixa um arquivo"
 
 #. TRANSLATORS: downloading from a remote server
 msgid "Downloading…"
@@ -916,6 +958,13 @@ msgid_plural "Firmware metadata has not been updated for %u days and may not be 
 msgstr[0] "Os metadados do firmware não foram atualizados a %u dia e podem não estar atualizados."
 msgstr[1] "Os metadados do firmware não foram atualizados a %u dias e podem não estar atualizados."
 
+#. TRANSLATORS: error message for a user who ran fwupdmgr
+#. refresh recently %1 is an already translated timestamp such
+#. as 6 hours or 15 seconds
+#, c-format
+msgid "Firmware metadata last refresh: %s ago. Use --force to refresh again."
+msgstr "Última atualização dos metadados do firmware: %s atrás. Use --force para atualizar novamente."
+
 #. TRANSLATORS: Title: if firmware updates are available
 msgid "Firmware updates"
 msgstr "Atualizações de firmware"
@@ -1018,7 +1067,7 @@ msgid "Host Security ID:"
 msgstr "ID de segurança do host:"
 
 #. TRANSLATORS: Title:
-#. https://en.wikipedia.org/wiki/Input%E2%80%93output_memory_management_unit
+#. * https://en.wikipedia.org/wiki/Input%E2%80%93output_memory_management_unit
 msgid "IOMMU"
 msgstr "IOMMU"
 
@@ -1037,10 +1086,6 @@ msgstr "Ignora falhas de soma de verificação de firmware"
 #. TRANSLATORS: command line option
 msgid "Ignore firmware hardware mismatch failures"
 msgstr "Ignora falhas de incompatibilidade de hardware de firmware"
-
-#. TRANSLATORS: command line option
-msgid "Ignore requirement of external power source"
-msgstr "Ignora o requisito de fonte de alimentação externa"
 
 #. TRANSLATORS: Ignore validation safety checks when flashing this device
 msgid "Ignore validation safety checks"
@@ -1159,8 +1204,13 @@ msgstr[1] "Problemas"
 msgid "KEY,VALUE"
 msgstr "CHAVE,VALOR"
 
+#. TRANSLATORS: keyring type, e.g. GPG or PKCS7
 msgid "Keyring"
 msgstr "Chaveiro"
+
+#. TRANSLATORS: command argument: uppercase, spaces->dashes
+msgid "LOCATION"
+msgstr "LOCAL"
 
 #. TRANSLATORS: the original time/date the device was modified
 msgid "Last modified"
@@ -1335,6 +1385,9 @@ msgstr "Nenhum remoto está atualmente habilitado, então nenhum metadado está 
 msgid "No remotes available"
 msgstr "Nenhum remoto disponível"
 
+msgid "No updates available for remaining devices"
+msgstr "Nenhuma atualização disponível para os dispositivos restantes"
+
 #. TRANSLATORS: nothing was updated offline
 msgid "No updates were applied"
 msgstr "Nenhuma atualização foi aplicada"
@@ -1358,6 +1411,15 @@ msgstr "Mostra apenas valor único de PCR"
 #. TRANSLATORS: command line option
 msgid "Only use IPFS when downloading files"
 msgstr "Usa apenas IPFS ao baixar arquivos"
+
+#. TRANSLATORS: some devices can only be updated to a new semver and cannot
+#. * be downgraded or reinstalled with the existing version
+msgid "Only version upgrades are allowed"
+msgstr "Apenas atualizações de versão são permitidas"
+
+#. TRANSLATORS: command line option
+msgid "Output in JSON format"
+msgstr "Saída em formato JSON"
 
 #. TRANSLATORS: command line option
 msgid "Override the default ESP path"
@@ -1558,6 +1620,10 @@ msgstr "Executa a rotina de limpeza da composição de plugin ao usar install-bl
 msgid "Run the plugin composite prepare routine when using install-blob"
 msgstr "Executa a rotina de preparação da composição de plugin ao usar install-blob"
 
+#. TRANSLATORS: The kernel does not support this plugin
+msgid "Running kernel is too old"
+msgstr "O kernel em uso é muito antigo"
+
 #. TRANSLATORS:  this is the HSI suffix
 msgid "Runtime Suffix"
 msgstr "Sufixo de tempo de execução"
@@ -1686,6 +1752,7 @@ msgstr "Assina um firmware com uma nova chave"
 msgid "Sign data using the client certificate"
 msgstr "Assina dados usando o certificado cliente"
 
+#. TRANSLATORS: command description
 msgctxt "command-description"
 msgid "Sign data using the client certificate"
 msgstr "Assina dados usando o certificado cliente"
@@ -1825,6 +1892,10 @@ msgstr "Contaminado"
 
 msgid "Target"
 msgstr "Alvo"
+
+#. TRANSLATORS: command description
+msgid "Test a device using a JSON manifest"
+msgstr "Testa um dispositivo usando um manifesto JSON"
 
 #. TRANSLATORS: do not translate the variables marked using $
 msgid "The LVFS is a free service that operates as an independent legal entity and has no connection with $OS_RELEASE:NAME$. Your distributor may not have verified any of the firmware updates for compatibility with your system or connected devices. All firmware is provided only by the original equipment manufacturer."
@@ -2078,11 +2149,11 @@ msgstr "O envio de relatórios de firmware ajuda os fornecedores de hardware a i
 msgid "Urgency"
 msgstr "Urgência"
 
-#. TRANSLATORS: error message explaining command to run to how to get help
+#. TRANSLATORS: error message explaining command on how to get help
 msgid "Use fwupdmgr --help for help"
 msgstr "Use fwupdmgr --help para ajuda"
 
-#. TRANSLATORS: error message explaining command to run to how to get help
+#. TRANSLATORS: error message explaining command on how to get help
 msgid "Use fwupdtool --help for help"
 msgstr "Use fwupdtool --help para ajuda"
 
@@ -2177,6 +2248,10 @@ msgstr "[ID-DISPOSITIVO|GUID] [RAMIFICAÇÃO]"
 #. TRANSLATORS: command argument: uppercase, spaces->dashes
 msgid "[FILE FILE_SIG REMOTE-ID]"
 msgstr "[ARQUIVO ARQUIVO-ASSINATURA ID-REMOTO]"
+
+#. TRANSLATORS: command argument: uppercase, spaces->dashes
+msgid "[FILENAME1] [FILENAME2]"
+msgstr "[NOME-DE-ARQUIVO1] [NOME-DE-ARQUIVO2]"
 
 #. TRANSLATORS: command argument: uppercase, spaces->dashes
 msgid "[SMBIOS-FILE|HWIDS-FILE]"
