--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -15,7 +15,7 @@ msgstr ""
 "Language: zh_TW\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#. more than a minute
+#. TRANSLATORS: more than a minute
 #, c-format
 msgid "%.0f minute remaining"
 msgid_plural "%.0f minutes remaining"
@@ -378,6 +378,7 @@ msgstr "安裝韌體更新中…"
 msgid "Installing on %s…"
 msgstr "正安裝到 %s…"
 
+#. TRANSLATORS: keyring type, e.g. GPG or PKCS7
 msgid "Keyring"
 msgstr "鑰匙圈"
 
